contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -191,7 +191,8 @@ div {
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
     padding: .7rem;
     text-align: center;
 }
